# rooftrace

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONVERGENCE-wave-4-ios-fusion.md  CONVERGENCE-wave5-stretches.md  Dockerfile  Gemfile  LICENSES.md  Procfile.dev  README.md  esbuild.config.mjs  jest.config.mjs  package-lock.json  package.json  tsconfig.json
.github/workflows/: ios.yml
.humanlayer/: workspace.json
app/controllers/: address_suggestions_controller.rb  application_controller.rb  health_controller.rb  jobs_controller.rb  reports_controller.rb  reports_demo_controller.rb  sessions_controller.rb  skeleton_controller.rb
app/helpers/: application_helper.rb  jobs_helper.rb  reports_helper.rb
app/javascript/: application.js
app/jobs/: application_job.rb  fusion_job.rb  geometry_job.rb  projection_job.rb
app/lib/: demo_credential.rb
app/models/: app_token.rb  capture.rb  capture_session.rb  job.rb  measurement.rb  projected_overlay.rb  report.rb  skeleton_ping.rb
app/serializers/: job_export_serializer.rb  job_status_serializer.rb
app/services/: artifact_store.rb  artifact_url_minter.rb  capture_session_ingester.rb  evidence_photos.rb  feature_detector.rb  fusion_orchestrator.rb  imagery_url_minter.rb  job_visualizations.rb  json_export_schema.rb  mapbox_static_fallback.rb  (+23 more)
config/: application.rb  cable.yml  ci.rb  credentials.yml.enc  database.yml  importmap.rb  queue.yml  routes.rb  storage.yml
db/: structure.sql
docs/: ARCHITECTURE.md  BUILD-PLAN-ios-full-app.md  BUILD-PLAN-wave5-stretches.md  BUILD-PLAN.md  CLAIM_PDF_REVIEW.md  COMPANY.md  CONVERGENCE-wave-3-surfaces.md  JSON_EXPORT_API.md  QA-FINDINGS.md  RESEARCH.md  ROADMAP.md  STATUS.md  TECHNICAL_WRITEUP.md  architecture-diagram.html
infra/: deploy.sh
ios/: .gitignore  MANUAL_TEST_PLAN.md  README.md  gen_pbxproj.py
ops/: .env.example  README.md  compose.prod.yaml  compose.yaml  deploy.yml  rooftrace.caddyfile  smoke.sh
shared/: JSON_EXPORT_CHANGELOG.md  JSON_EXPORT_CONVENTIONS.md  PIPELINE_SCHEMA_CHANGELOG.md  ios_session_schema.json  json_export.schema.json  pipeline_schema.json
sidecar/: .dockerignore  Dockerfile  pyproject.toml
sidecar/app/: auth.py  boot_checks.py  flags.py  main.py  pipeline_utils.py  storage.py
sidecar/app/evidence/: router.py
sidecar/app/fuse_capture/: icp.py  mesh_io.py  router.py
sidecar/app/imagery/: __init__.py  naip.py  router.py
sidecar/app/lidar/: crs.py  ept_index.py  ingest.py  router.py  wesm.py
sidecar/app/outline/: router.py  sam2_modal.py  segmenter.py
sidecar/app/planefit/: geometry.py  plane_fit.py  roof_model.py  router.py  topology.py
sidecar/app/project_photo/: router.py
sidecar/app/render/: photo_occlusion.py  photo_overlay.py  photo_projection.py
sidecar/app/render_images/: headless_viewer.py  renderer.py  router.py
sidecar/app/resolve_address/: cache.py  ms_footprints.py  nominatim.py  regrid.py  router.py  service.py
sidecar/contracts/: pipeline.py
sidecar/tests/: conftest.py  test_boot_checks.py  test_ept_index.py  test_eval_models.py  test_feature_dataset_integrity.py  test_fuse_capture_endpoint.py  test_fuse_capture_icp.py  test_ingest_ept_resolution.py  test_lidar_ingest.py  test_lidar_points.py  test_photo_occlusion.py  test_photo_overlay.py  test_photo_projection.py  test_pipeline_contract.py  test_pitch_nullable.py  test_planefit.py  test_project_photo.py  test_projection_performance.py  test_projection_regression.py  test_refine_outline.py  test_render_imagery.py  test_render_images.py  test_render_images_renderer.py  test_resolve_address.py  test_skeleton.py  test_storage.py  test_validation_config.py  test_validation_metrics.py  test_validation_report.py
sidecar/tests/fixtures/: ept_boundaries_sample.json
sidecar/tests/fixtures/f16/: generate_fixtures.py  lidar_cloud.npy
sidecar/tests/fixtures/projections/: generate_fixtures.py
sidecar/validation/: README.md  README_GROUND_TRUTH.md  ground_truth.yaml  metrics.py  report.py  test_addresses.yaml
sidecar/validation/feature_detection/: LABELING_PROTOCOL.md  eval_models.py  known_labels.json  labels.json  manifest.json  pull_tiles.py
sidecar/validation/fixtures/: sample_results.json  wesm_index.json
spec/: rails_helper.rb
(+409 files in other folders)
