[project]
name = "rooftrace-sidecar"
version = "0.1.0"
description = "RoofTrace geospatial Python sidecar (FastAPI). F-01 ships a stub /skeleton; subsequent features add PDAL/SAM2/RANSAC/ICP."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.7",
    # Validate the shared fixture corpus against shared/pipeline_schema.json
    # directly (the JSON Schema source of truth), alongside the Pydantic models,
    # so divergence between the two Python views is caught too (F-02 contract test).
    "jsonschema>=4.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
