[project]
name = "rooftrace-sidecar"
version = "0.1.0"
description = "RoofTrace geospatial Python sidecar (FastAPI). F-01 ships a stub /skeleton; subsequent features add PDAL/SAM2/RANSAC/ICP."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "numpy>=2.4.6",
    "shapely>=2.1.2",
    "pyproj>=3.7.2",
    "httpx>=0.28.1",
    "boto3>=1.43.16",
    "pillow>=10.0.0",
    "rasterio>=1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.7",
    # Validate the shared fixture corpus against shared/pipeline_schema.json
    # directly (the JSON Schema source of truth), alongside the Pydantic models,
    # so divergence between the two Python views is caught too (F-02 contract test).
    "jsonschema>=4.23",
    "pytest-recording>=0.13.4",
    "pillow>=12.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
