[project]
name = "rooftrace-sidecar"
version = "0.1.0"
description = "RoofTrace geospatial Python sidecar (FastAPI). F-01 ships a stub /skeleton; subsequent features add PDAL/SAM2/RANSAC/ICP."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "numpy>=2.4.6",
    "shapely>=2.1.2",
    "pyproj>=3.7.2",
    "httpx>=0.28.1",
    "boto3>=1.43.16",
    "pillow>=10.0.0",
    "rasterio>=1.3",
    # Headless top-down map render for the roof report (ADR-014). Gated by
    # RENDER_IMAGES_LIVE=1; the chromium browser is installed via
    # `playwright install --with-deps chromium` in the sidecar Dockerfile.
    "playwright>=1.49",
    "pyyaml>=6.0",
    # Point-to-plane ICP for the iOS capture<->public-LiDAR fusion (ADR-007).
    # Open3D ships a pip wheel installable into the uv-managed virtualenv (PDAL's
    # filters.icp would require a conda-only package). Gated by FUSE_CAPTURE_LIVE=1;
    # a boot check verifies importability when the live path is enabled.
    "open3d>=0.18.0",
    # Photo-projection overlay (ADR-019): trimesh loads the ARKit world mesh
    # faces-aware for ray-cast z-buffer occlusion (CI-friendly, no pyrender/OSMesa);
    # svgwrite composes the facet/feature overlay layer. Real render is the default
    # (the test opt-down PROJECT_PHOTO_FIXTURE=1 serves the placeholder); a boot
    # check verifies importability so a broken image fails fast.
    "trimesh>=4.4",
    "svgwrite>=1.4",
    # trimesh's pure-Python RayMeshIntersector builds an Rtree spatial index over
    # the mesh triangles; rtree ships manylinux/macos wheels (no conda), so the
    # ray-cast occlusion path stays CI-friendly without pyrender/OSMesa/pyembree.
    "rtree>=1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.7",
    # Validate the shared fixture corpus against shared/pipeline_schema.json
    # directly (the JSON Schema source of truth), alongside the Pydantic models,
    # so divergence between the two Python views is caught too (F-02 contract test).
    "jsonschema>=4.23",
    "pytest-recording>=0.13.4",
    "pillow>=12.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
